@@ -1,3 +1,5 @@
+#Properties of this specific CALIPH build
+#Thu, 18 Apr 2013 13:10:08 +0200
 #
 # This file is part of the LIRE project: http://www.semanticmetadata.net/lire
 # LIRE is free software; you can redistribute it and/or modify
@@ -42,5 +44,5 @@
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/04/16 16\:41
-build-number=167
+build-date=2013/04/18 13\:10
+build-number=168
